--- a/.editorconfig
+++ b/.editorconfig
@@ -8,13 +8,13 @@ root = true
 end_of_line = lf
 insert_final_newline = true
 
-[*.{md,html}]
+[*.html]
 indent_style = tab
 indent_size = 4
 
 # Matches multiple files with brace expansion notation
 # Set default charset
-[*.js]
+[*.{js,md}]
 charset = utf-8
 indent_style = space
 indent_size = 2
